# smol-mpc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  mpc.rs  vm.rs
src/math/: mersenne.rs  mod.rs  rng.rs
src/math/src/: field.rs  lib.rs  mersenne.rs  rng.rs
src/utils/: mod.rs  prg.rs
tests/: mersenne_test.rs  mpc_test.rs  prg_test.rs
