[package]
name = "smol-mpc"
version = "0.1.0"
edition = "2021"
categories = ["cryptography"]
keywords = ["mpc", "cryptography"]
readme = "README.md"
repository = "https://github.com/hashcloak/smol-mpc"
description = "A port of TinySMPC into Rust."
license = "GPL-3.0-only"
license-file = "LICENSE"

[dependencies]
rand = "0.8.5"
aes = "0.8.3"
ctr = "0.9.2"
katex-doc = "0.1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/katex-header.html" ]